# webdavrs

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml  sample.http
.github/workflows/: docker.yml
migrations/: 20221113092122_user.up.sql  20240214185343_config.up.sql
src/: list.rs  main.rs  user.rs
src/http/: auth.rs  basic_auth.rs  config.rs  dir.rs  estatic.rs  jwt_auth.rs  mod.rs  root.rs  user.rs  webdav.rs
src/models/: config.rs  mod.rs  response.rs  user.rs
templates/: directory.html
