[package]
name = "webdavrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
cookie = "0.18.1"
dav-server = { version = "0.7", features = ["actix-compat"]}
derive_more = "1.0.0"
jsonwebtoken = "9.3.0"
md5 = "0.7.0"
minijinja = { version = "2.3.1", features = ["loader"] }
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "macros", "chrono"] }
tokio = { version = "1.40", features = ["full"]}
tower-http = { version = "0.6.0", features = ["trace", "fs", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }

[dev-dependencies]
dotenv = "0.15.0"
