[package]
name = "webdavrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Lorenzo Carbonell <lorenzo.carbonell.cerezo@gmail.com>"]
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
dav-server = { version = "0.7", features = ["actix-compat"] }
md5 = "0.7.0"
minijinja = { version = "2.3.1", features = ["loader"] }
once_cell = "1.19.0"
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.40", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time", "env-filter"] }

[dev-dependencies]
dotenv = "0.15.0"
